@@ -1,4 +1,4 @@
-.\" $Id: tmux.1,v 1.95 2009-05-04 17:58:27 nicm Exp $
+.\" $Id: tmux.1,v 1.96 2009-05-18 21:58:40 nicm Exp $
 .\"
 .\" Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
 .\"
@@ -330,7 +330,7 @@ Only the active pane is shown - all other panes are hidden.
 Panes are spread out evenly from left to right across the window.
 .It Ic even-vertical
 Panes are spread evenly from top to bottom.
-.It Ic left-vertical
+.It Ic main-vertical
 A large (81 column) pane is shown on the left of the window and the remaining
 panes are spread from top to bottom in the leftover space to the right.
 .El
