@@ -1,3 +1,9 @@
+18 May 2009
+
+* New window option main-pane-width to set the width of the large left pane with
+  main-vertical (was left-vertical) layout. 
+* Lots of layout cleanup. manual layout is now manual-vertical.
+
 16 May 2009
 
 * select-layout command and a few default key bindings (M-0, M-1, M-2, M-9) to
@@ -1263,7 +1269,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.290 2009-05-16 11:48:47 nicm Exp $
+$Id: CHANGES,v 1.291 2009-05-18 21:58:40 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
